# bot_onboarding

./: alembic.ini  app.py  docker-compose.yml  pyproject.toml  pytest.ini
bot_app/: __init__.py  bootstrap.py  constants.py
bot_app/filters/: __init__.py  access_check.py
bot_app/handlers/: __init__.py
bot_app/handlers/errors/: error_handler.py
bot_app/handlers/users/: access_denied.py  ai_qna.py  feedback.py  help.py  lesson_handlers.py  scenario.py
bot_app/keyboards/: __init__.py
bot_app/keyboards/inline/: __init__.py  ml_rating_kb.py  scenario_kb.py
bot_app/middlewares/: __init__.py
bot_app/states/: __init__.py  scenario.py
bot_app/utils/: notify_admins.py
core/: __init__.py  config.py
core/db/: __init__.py  database.py  first_stage_db_commands.py  models.py  models_old.py  second_stage_db_commands.py  session.py
core/services/: __init__.py  base.py  direction.py  lessons.py  ml_gateway.py  progress.py  quiz.py  scenario_analytics.py  scenario_loader.py
data/scenarios/: sales_demo_v1.json
docker/: Dockerfile  entrypoint.sh
migrations/: env.py
ml_service/: inference.py  llm_runner.py
ml_service/scripts/: build_chunks.py  build_index.py  ingest_confluence.py  ingest_jira.py  ingest_manual.py
monitoring/: prometheus.py  prometheus.yml
monitoring/dashboards/: onboarding.json
scripts/: __init__.py  seed_lessons.py  seed_lessons_2.py  set_second_stage_commands.py  set_start_bot_commands.py
tests/: confest.py  test_smoke.py
